--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <h1>My ECS Github Web Page</h1>
   <p>I love ECS!</p>
   <p>lol</p>
+  <a href="https://www.w3schools.com">w3 schools</a> 
 
 </body>
 </html>
