--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <p>I love ECS!</p>
   <p>lol</p>
   <a href="https://www.w3schools.com">w3 schools</a> 
+  <p>This is<br>a paragraph<br>with line breaks</p>
 
 </body>
 </html>
