--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
   <title>My ECS Github Page</title>
-<body>
+<body style="background-color:powderblue;">
 
-<h1>My ECS Github Web Page</h1>
+<h2 style="background-color:DodgerBlue;">My ECS Github Web Page</h1>
   <!--hello world-->
   <p>I love ECS!</p>
   <p>lol</p>
   <a href="https://www.w3schools.com">w3 schools</a> 
   <p>This is<br>a paragraph<br>with line breaks</p>
-
+  <img src="https://static.pexels.com/photos/36753/flower-purple-lical-blosso.jpg" width="500" height="300">
+  <b>soooooo cooooooool</b>
+  <p>Live life <q>to the fullest</q> </p>
 </body>
 </html>
