--- a/exercises/index.html
+++ b/exercises/index.html
@@ -1,7 +1,7 @@
 <!doctype html/>
 <html>
 <title>my title</title>
-<body>
+<body style="background-color:powderplue;">
 <h1>head</h1>
 <p>my paragraph</p>
 </body>
