--- a/exercises/index.html
+++ b/exercises/index.html
@@ -1,8 +1,9 @@
 <!doctype html/>
 <html>
 <title>my title</title>
-<body style="background-color:powderblue;">
-<h1>head</h1>
-<p>my paragraph</p>
+<body>
+<h1 style="color:tomato;">head</h1>
+<p style="color:dodgerblue;">my paragraph</p>
+  <p style="color:pink;">hi</p>
 </body>
 </html>
