--- a/exercises/index.html
+++ b/exercises/index.html
@@ -5,5 +5,8 @@
 <h1 style="color:tomato;">head</h1>
 <p style="color:dodgerblue;">my paragraph</p>
   <p style="color:pink;">hi</p>
+  <h2 style="border:2px solid dodgerblue;">haha</h2>
+  <p style="border:2px solid tomato;"> lol</p>
+  
 </body>
 </html>
