--- a/exercises/index.html
+++ b/exercises/index.html
@@ -7,6 +7,7 @@
   <p style="color:pink;">hi</p>
   <h2 style="border:2px solid dodgerblue;">haha</h2>
   <p style="border:2px solid tomato;"> lol</p>
+  <a href="https://dhanyaaa.github.io/
   
 </body>
 </html>
