--- a/exercises/index.html
+++ b/exercises/index.html
@@ -8,7 +8,7 @@
   <h2 style="border:2px solid dodgerblue;">haha</h2>
   <p style="border:2px solid tomato;"> lol</p>
   <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/links.html">ayyyyy</a>
-  <img src="https://static.pexels.com/photos/60597/dahlia-red-blossom-bloom-60597.jpeg">
+  <img src="https://static.pexels.com/photos/60597/dahlia-red-blossom-bloom-60597.jpeg" alt=flower width=50 height=60>
   
 </body>
 </html>
