--- a/links.html
+++ b/links.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html/>
 <html>
 <title>my title</title>
+<a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/index.html">
+  <img src="http://www.colombiainsideout.com.co/mediaarts/hermanpelaez/Images/hmbt.png" alt="excercises home"
+       style=width:42px;height:42 px;border:0;">
+                                               </a>                                               
 <body>
 <h1>head</h1>
 <p>my paragraph hi lol hehe</p>
