--- a/project/location.html
+++ b/project/location.html
@@ -7,5 +7,6 @@
 <h2>Location</h1>
   <p>This becah is located in La Jolla and very close by to many places such as Carmel Valley and Mira Mesa. The address is 8246 La Vereda, La Jolla, CA 92037</p> 
   <img src="http://www.destination360.com/north-america/us/california/la-jolla/hotel-la-jolla-at-the-shores-map.gif">
+  <p>You will find that this beach is in a very convenient location; however, parking may be an issue.</p>
 </body>
 </html>
