--- a/project/index.html
+++ b/project/index.html
@@ -16,7 +16,7 @@
  <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/project/hotels.html">
 <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwj73o_DxpTXAhUQyWMKHXh8DvcQjRwIBw&url=https%3A%2F%2Fthenounproject.com%2Fterm%2Fhotel%2F46%2F&psig=AOvVaw32j5m8OmG-WqLenoZj9gWy&ust=1509322476367968" alt="Hotels" width="42" height="42" border="0">
  <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/project/temperature.html">
-<img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fd30y9cdsu7xlg0.cloudfront.net%2Fpng%2F7810-200.png&imgrefurl=https%3A%2F%2Fthenounproject.com%2Fterm%2Ftemperature%2F52631%2F&docid=ig9FFY_6vJj9eM&tbnid=LEDJk9r5bt5Q9M%3A&vet=10ahUKEwjGkMLHx5TXAhVrzVQKHbOfD5sQMwhnKAAwAA..i&w=200&h=200&bih=941&biw=1920&q=temp%20icon&ved=0ahUKEwjGkMLHx5TXAhVrzVQKHbOfD5sQMwhnKAAwAA&iact=mrc&uact=8" alt="Hotels" width="42" height="42" border="0">
+<img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fd30y9cdsu7xlg0.cloudfront.net%2Fpng%2F7810-200.png&imgrefurl=https%3A%2F%2Fthenounproject.com%2Fterm%2Ftemperature%2F52631%2F&docid=ig9FFY_6vJj9eM&tbnid=LEDJk9r5bt5Q9M%3A&vet=10ahUKEwjGkMLHx5TXAhVrzVQKHbOfD5sQMwhnKAAwAA..i&w=200&h=200&bih=941&biw=1920&q=temp%20icon&ved=0ahUKEwjGkMLHx5TXAhVrzVQKHbOfD5sQMwhnKAAwAA&iact=mrc&uact=8" alt="Temperature" width="42" height="42" border="0">
 
 <h2>La Jolla Shores Official Page</h1>
   <p>Welcome to the website for La Jolla Shores beach! Click the icons above to find information about this amazing beach. This beach is very popular and is visited by hundred of people everyday! We plan on making this beach as clean and enjoyable as possible!</p> 
