--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -5,6 +5,7 @@
 <h1>Time to link stuff....</h1>
 <p>hello world</p>
 <a href="https://www.w3schools.com/html/html_attributes.asp">this is my source of knowlege for this assignment</a>
+  <a href="headings.html" this is a link</a>
 <img src="https://i.ytimg.com/vi/JilHZ_DdBYg/maxresdefault.jpg">
 </body>
 </html>
