--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -4,8 +4,10 @@
 <body>
 <h1>Time to link stuff....</h1>
 <p>hello world</p>
-<a href="https://www.w3schools.com/html/html_attributes.asp">this is my source of knowlege for this assignment</a>
-  <a href="headings.html"> this is a link</a>
+<ul>
+<li><a href="https://www.w3schools.com/html/html_attributes.asp">this is my source of knowlege for this assignment</a></li>
+<li><a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/headings.html"> this is a link</a></li>
+</ul>
 <img src="https://i.ytimg.com/vi/JilHZ_DdBYg/maxresdefault.jpg">
 </body>
 </html>
