--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -8,6 +8,24 @@
 <li><a href="https://www.w3schools.com/html/html_attributes.asp">this is my source of knowlege for this assignment</a></li>
 <li><a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/headings.html"> this is a link</a></li>
 </ul>
+<table style="width:100%">
+  <tr>
+    <th>Candy</th>
+    <th>Calories</th> 
+    <th>Rating</th>
+  </tr>
+  <tr>
+    <td>Skittles</td>
+    <td>231</td> 
+    <td>5</td>
+  </tr>
+  <tr>
+    <td>Hershey's</td>
+    <td>214</td> 
+    <td>1000/td>
+  </tr>
+</table>
+
 <img src="https://i.ytimg.com/vi/JilHZ_DdBYg/maxresdefault.jpg">
 </body>
 </html>
