Update and rename CSS to CSS.html

--- a/exercises/CSS.html
+++ b/exercises/CSS.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <style>
-body {background-color:lightgrey}
+body {background-color:black}
 h1   {color:orange}
-p    {color:black}
+p    {color:orange}
 </style>
 </head>
 <body>
