--- a/exercises/images.html
+++ b/exercises/images.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwjx6ZrHm5vXAhUEilQKHZJdAPAQjRwIBw&url=http%3A%2F%2Fbestanimations.com%2FComputers%2FComputers.html&psig=AOvVaw3Lo6k--zHXaPFFzvKP_tA2&ust=1509551446462817" alt="Computer Man"
+<img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwjx6ZrHm5vXAhUEilQKHZJdAPAQjRwIBw&url=http%3A%2F%2Fbestanimations.com%2FComputers%2FComputers.html&psig=AOvVaw3Lo6k--zHXaPFFzvKP_tA2&ust=1509551446462817" alt="Computer gif"
 width="48" height="48">
 
 </body>
