--- a/CSS-Excercises/index.html
+++ b/CSS-Excercises/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>CSS</title>
+    <title>repl.it</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
  <h1>CSS Example</h1>
  <p>My CSS Examples</p>
+ <p id="id1">hello</p>
+ <p class="center">my paragraph </p>
+ <div class="bluev">
+     <h1>heading</h1>
+     <p>hola</p>
+ </div>
 </html>
