--- a/CSS-Excercises/index.html
+++ b/CSS-Excercises/index.html
@@ -7,8 +7,8 @@
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <link href="https://dhanyaaa.github.io/jakkulad8518.github.io/CSS-Excercises/selectors.html">Selectors<link>
-    <link href="https://dhanyaaa.github.io/jakkulad8518.github.io/CSS-Excercises/styles.css">styles<link>
+    <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/CSS-Excercises/selectors.html">Selectors</a>
+    <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/CSS-Excercises/styles.css">styles</a>
  <h1>CSS Example</h1>
  <p>My CSS Examples</p>
  <p id="id1">hello</p>
