--- a/exercises/index.html
+++ b/exercises/index.html
@@ -3,6 +3,19 @@
 <title>my title</title>
 <body>
 <h1 style="color:tomato;">head</h1>
+    <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/attributes.html">Attributes</a>
+  <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/classes.html">Classes</a>
+  <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/colors.html">Colors</a>
+  <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/css.html">CSS</a>
+  <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/formatting.html">Formatting</a>
+  <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/headings.html">Headings</a>
+  <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/images.html">Images</a>
+  <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/links.html">Links</a>
+  <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/lists.html">Lists</a>
+  <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/paragraphs.html">Paragraphs</a>
+  <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/quotations.html">Quotations</a>
+  <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/style.html">Style</a>
+  <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/table.html">Tables</a>
 <p style="color:dodgerblue;">my paragraph</p>
   <p style="color:pink;">hi</p>
   <h2 style="border:2px solid dodgerblue;">haha</h2>
