--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <h1>My page!</h1>
   <p>Welcome to my homepage!</p>
 <ul>
-  <li><a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/">My excercises</a>
+  <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/">My excercises</a>
+  <li><a href="
 </body>
 </html>
