--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <p>Welcome to my homepage!</p>
 <ul>
   <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/">My excercises</a>
-  <li><a href="
+  <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/css-excercises">CSS Excercises</a>
+  <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/html-reference.html"> Reference page</a>
 </body>
 </html>
