--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -4,6 +4,19 @@
 <body>
 <h1>Time to link stuff....</h1>
 <p>hello world</p>
+      <a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/attributes.html">Attributes</a>
+  <a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/classes.html">Classes</a>
+  <a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/colors.html">Colors</a>
+  <a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/css.html">CSS</a>
+  <a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/formatting.html">Formatting</a>
+  <a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/headings.html">Headings</a>
+  <a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/images.html">Images</a>
+  <a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/links.html">Links</a>
+  <a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/lists.html">Lists</a>
+  <a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/paragraphs.html">Paragraphs</a>
+  <a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/quotations.html">Quotations</a>
+  <a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/style.html">Style</a>
+  <a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/table.html">Tables</a>
 <ul>
 <li><a href="https://www.w3schools.com/html/html_attributes.asp">this is my source of knowlege for this assignment</a></li>
 <li><a href="https://dhanyaaa.github.io/jakkulad8518.github.io/exercises/headings.html"> this is a link</a></li>
