--- a/html-reference.html
+++ b/html-reference.html
@@ -6,6 +6,12 @@
   <body>
 <link href="styles.css" rel="stylesheet" type="text/css" />
 <h1>HTML Reference page: Dhanya Jakkula</h1>
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Start Tag</th>
+    <th>End tag</th>
+    <th>example</th>
 <h2>Main Requirements</h2>
 <p>You must always have 4 main elements to organize and constitute our page. They are:</p>
 <li>!DOCTYPE - It tells the program what language is being used.</li>
