--- a/exercises/images.html
+++ b/exercises/images.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwjx6ZrHm5vXAhUEilQKHZJdAPAQjRwIBw&url=http%3A%2F%2Fbestanimations.com%2FComputers%2FComputers.html&psig=AOvVaw3Lo6k--zHXaPFFzvKP_tA2&ust=1509551446462817" alt="Computer gif"
-width="48" height="48">
+<img src="https://cdn.thinglink.me/api/image/883762013296132098/1240/10/scaletowidth" alt="Computer" width="48 height "48">
+     <img src="http://drop.ndtv.com/TECH/product_database/images/913201720152AM_635_iphone_x.jpeg" alt="iphone x" width="48" height="48">
 
 </body>
 </html>
