--- a/html-reference.html
+++ b/html-reference.html
@@ -12,6 +12,10 @@
     <th>Start Tag</th>
     <th>End tag</th>
     <th>example</th>
+  </tr>
+  <tr>
+    <td><a href="#html">Html</a></td>
+    <td>
 <h2>Main Requirements</h2>
 <p>You must always have 4 main elements to organize and constitute our page. They are:</p>
 <li>!DOCTYPE - It tells the program what language is being used.</li>
