--- a/html-reference.html
+++ b/html-reference.html
@@ -15,7 +15,10 @@
   </tr>
   <tr>
     <td><a href="#html">Html</a></td>
-    <td>
+    <td>the tag</td>
+    <td>the end tag</td>
+    <td>exampleeeee</td>
+    </tr>
 <h2>Main Requirements</h2>
 <p>You must always have 4 main elements to organize and constitute our page. They are:</p>
 <li>!DOCTYPE - It tells the program what language is being used.</li>
