--- a/html-reference.html
+++ b/html-reference.html
@@ -15,11 +15,75 @@
   </tr>
   <tr>
     <td><a href="#html">Html</a></td>
-    <td>the tag</td>
-    <td>the end tag</td>
-    <td>exampleeeee</td>
+    <td>&lt;html&gt;</td>
+    <td>&lt;&sol;html&gt;</td>
+    <td>&lt;html&gt;head and body&lt;&sol;html&gt;</td>
     </tr>
-    </table>
+  <tr>
+    <td><a href="#head">Head</a></td>
+    <td>&lt;title&gt;</td>
+    <td>&lt;&sol;title&gt;</td>
+    <td>&lt;title&gt;heading&lt;&sol;title&gt;</td>
+    </tr>
+  <tr>    
+    <td><a href="#body">body</a></td>
+    <td>&lt;body&gt;</td>
+    <td>&lt;&sol;body&gt;</td>
+    <td>&lt;body&gt;content&lt;&sol;body&gt;</td>
+    </tr>
+  <tr>    
+    <td><a href="#headings">headings</a></td>
+    <td>&lt;h1&gt;</td>
+    <td>&lt;&sol;h1&gt;</td>
+    <td>&lt;h1&gt;headingt&lt;&sol;h1&gt;</td>
+    </tr>
+  <tr>    
+    <td><a href="#paragraphs">paragraphs</a></td>
+    <td>&lt;p&gt;</td>
+    <td>&lt;&sol;p&gt;</td>
+    <td>&lt;p&gt;text&lt;&sol;p&gt;</td>
+    </tr>
+  <tr>    
+    <td><a href="#breaks">body</a></td>
+    <td>&lt;br&gt;</td>
+    <td>none</td>
+    <td>&lt;br&gt;content&lt;br&gt;more content</td>
+    </tr>
+<tr>    
+    <td><a href="#lines">lines</a></td>
+    <td>&lt;hr&gt;</td>
+    <td>none</td>
+    <td>&lt;hr&gt;content&lt;hr&gt;more content</td>
+    </tr>
+ <td><a href="#comments">comments</a></td>
+    <td>&lt;!--comment--&gt;</td>
+    <td>none</td>
+    <td>&lt;!--comment--&gt;</td>
+    </tr>
+  <tr>    
+    <td><a href="#links">links</a></td>
+    <td>&lt;a href="url"&gt;</td>
+    <td>&lt;&sol;a&gt;</td>
+    <td>&lt;a href="url"&gt;hyperlink text&lt;&sol;a&gt;</td>
+    </tr>
+ <td><a href="#images">images</a></td>
+    <td>&lt;img src="url"&gt;</td>
+    <td>none</td>
+    <td>&lt;img src="url"&gt;</td>
+    </tr>
+  <tr>    
+    <td><a href="#lists">lists</a></td>
+    <td>&lt;ul or ol&gt;&lt;li&gt;</td>
+    <td>&lt;&sol;ul or ol&gt;&lt;&sol;li&gt;</td>
+    <td>&lt;ul&gt;&lt;li&gt;item&lt;&sol;li&gt;&lt;&sol;ul&gt;</td>
+    </tr>
+  <tr>    
+    <td><a href="#tables"></a></td>
+    <td>&lt;table&gt;&lt;tr&gt;&lt;th&gt;&lt;td&gt;</td>
+    <td>&lt;&sol;table&gt;&lt;&sol;tr&gt;&lt;&sol;th&gt;&lt;&sol;td&gt;</td>
+    <td>&lt;table&gt;&lt;tr&gt;headings and data&lt;&sol;tr&gt;&lt;&sol;table&gt;</td>
+    </tr>
+
 <h2>Main Requirements</h2>
 <p>You must always have 4 main elements to organize and constitute our page. They are:</p>
 <li>!DOCTYPE - It tells the program what language is being used.</li>
