--- a/html-reference.html
+++ b/html-reference.html
@@ -83,7 +83,7 @@
     <td>&lt;&sol;table&gt;&lt;&sol;tr&gt;&lt;&sol;th&gt;&lt;&sol;td&gt;</td>
     <td>&lt;table&gt;&lt;tr&gt;headings and data&lt;&sol;tr&gt;&lt;&sol;table&gt;</td>
     </tr>
-
+  </table>
 <h2>Main Requirements</h2>
 <p>You must always have 4 main elements to organize and constitute our page. They are:</p>
 <li>!DOCTYPE - It tells the program what language is being used.</li>
