--- a/html-reference.html
+++ b/html-reference.html
@@ -4,14 +4,22 @@
     <title>HTML Reference</title>
   </head>
   <body>
+<link href="html-reference.css" rel="stylesheet" type="text/css" />
+<h1>HTML Reference page: Dhanya Jakkula</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>HTML Reference</title>
+  </head>
+  <body class="body">
 <link href="styles.css" rel="stylesheet" type="text/css" />
 <h1>HTML Reference page: Dhanya Jakkula</h1>
-<table>
+<table id="table">
   <tr>
     <th>Name</th>
     <th>Start Tag</th>
     <th>End tag</th>
-    <th>example</th>
+    <th>Example</th>
   </tr>
   <tr>
     <td><a href="#html">Html</a></td>
@@ -44,7 +52,7 @@
     <td>&lt;p&gt;text&lt;&sol;p&gt;</td>
     </tr>
   <tr>    
-    <td><a href="#breaks">body</a></td>
+    <td><a href="#breaks">breaks</a></td>
     <td>&lt;br&gt;</td>
     <td>none</td>
     <td>&lt;br&gt;content&lt;br&gt;more content</td>
@@ -55,6 +63,7 @@
     <td>none</td>
     <td>&lt;hr&gt;content&lt;hr&gt;more content</td>
     </tr>
+    <tr>
  <td><a href="#comments">comments</a></td>
     <td>&lt;!--comment--&gt;</td>
     <td>none</td>
@@ -66,6 +75,7 @@
     <td>&lt;&sol;a&gt;</td>
     <td>&lt;a href="url"&gt;hyperlink text&lt;&sol;a&gt;</td>
     </tr>
+    <tr>
  <td><a href="#images">images</a></td>
     <td>&lt;img src="url"&gt;</td>
     <td>none</td>
@@ -78,42 +88,170 @@
     <td>&lt;ul&gt;&lt;li&gt;item&lt;&sol;li&gt;&lt;&sol;ul&gt;</td>
     </tr>
   <tr>    
-    <td><a href="#tables"></a></td>
+    <td><a href="#tables">table</a></td>
     <td>&lt;table&gt;&lt;tr&gt;&lt;th&gt;&lt;td&gt;</td>
     <td>&lt;&sol;table&gt;&lt;&sol;tr&gt;&lt;&sol;th&gt;&lt;&sol;td&gt;</td>
     <td>&lt;table&gt;&lt;tr&gt;headings and data&lt;&sol;tr&gt;&lt;&sol;table&gt;</td>
     </tr>
+    <tr>    
+    <td><a href="#blocks">Blocks</a></td>
+    <td>&lt;div&gt;</td>
+    <td>&lt;&sol;div&gt;</td>
+    <td>&lt;div&gt;filler&lt;&sol;div&gt;</td>
+    </tr>
   </table>
 <h2>Main Requirements</h2>
-<p>You must always have 4 main elements to organize and constitute our page. They are:</p>
-<li>!DOCTYPE - It tells the program what language is being used.</li>
-<li>html - This also tells the program the language</li>
-<li>head - It sorts your code so that you ca easily edit your titles.</li>
-<li>body - This also helps sort your code so you can access paragraphs and headings easily.</li>
+<p>You must always have 2 main elements to organize and constitute our page. They are:</p>
+
+<!--Doctype-->
+<p class="hstyle">Element:!DOCTYPE</p>
+<p style= "margin-top: -23px"class="rest"><b>Description:</b> It tells the computer what language is being used.<br><b>Syntax:</b></p>
+<ul style="margin-top: -24px" class="rest">
+    <li><b>start tag:</b>&lt;!DOCTYPE&gt;</li>
+    <li><b>content:</b> language used</li>
+    <li><b>end tag:</b> none</li>
 </ul>
+
+<!--html-->
+<p id="html" class="hstyle">Element:HTML</p>
+<p style= "margin-top: -23px"class="rest"><b>Description:</b> It tells the computer what program is being used.<br><b>Syntax:</b> </p>
+<ul style="margin-top: -24px" class="rest">
+    <li><b>start tag:</b>&lt;html&gt;</li>
+    <li><b>content:</b> language used</li>
+    <li><b>end tag:</b> &lt;&sol;html&gt;</li>
+</ul>
+
+
 <h2>Head</h2>
-<p>Within the head, there is only one element which is he title. The title is what is listed at the top of the tag.For example, mine's is "HTML Reference."</p>
-<h2>Body</h2>
-<p>Within the body, there are many elements to organize your content.</p>
-<b>Headings:</b><p> They title your paragraphs. You can also change the size of headings by putting numbers next to them. For example, a tag could be h1 is bigger than h2.</p>
-<b>Pargraphs:</b><p>Pargraphs were used throughout this site; infact right now. It is just regular text. The tag is < p >.</p>
-<b>Breaks:</b><p>Breaks make breaks within your site. <br>For<br> Example,<br> right <br> now.<br>The tag is br.</p> 
-<b>Lines</b><p>Yo can make lines between<hr> your text. <hr> like this<hr> The tag is hr.</p>
-<b>Comments:</b><p>You can make comments in HTML that can only be viewed through the source code. You will need this tag: !--comment--. If you look at the source code, you can see my comment.</p> <!--hello stalker-->
-<b>Links:</b><p>In order to link a site, you need the a tag. The syntax should look like this < a href="url">hyperlink text< /a>. For example,</p> <a href="https://www.w3schools.com/html/html_links.asp">my source of knowlege for this part.</a>
-<b>Images:</b><p>The tag < img > can be used to add and image. The  < img src ="url"> No end tag s needed. For example <img src="https://static.pexels.com/photos/36753/flower-purple-lical-blosso.jpg"></p><p>You can also change size by writing width and height = </p>
-<b>Lists:</b><p>We can make list that are numbered or bulleted.First define which kind you want:
-Bulleted= ul and numbered= ol. Then write li in front of each listed item.</p>
-It should <ul>
-    <li>look</li>
-    <li>like</li>
-    <li>this</li>
+<!--head-->
+<p id="head" class="hstyle">Element:Head</p>
+<p style= "margin-top: -23px"class="rest"><b>Description:</b>It keeps all of the elemnts of the header together.<br><b> Syntax:</b></p>
+<ul style="margin-top: -24px" class="rest">
+    <li><b>start tag:</b>&lt;head&gt;</li>
+    <li><b>content: </b>header elements</li>
+    <li><b>end tag:</b> &lt;&sol;head&gt;</li>
 </ul>
-<ol>
-    <li>or</li>
-    <li>like</li>
-    <li>this</li>
+
+<!--title-->
+<p id="title" class="hstyle">Element:Title</p>
+<p style= "margin-top: -23px"class="rest">Description:It is the title of the page loacted at the top of the tab.<br><b>Syntax:</b></p>
+<ul style="margin-top: -24px" class="rest">
+    <li><b>start tag:</b>&lt;title&gt;</li>
+    <li><b>content:</b> title of the site</li>
+    <li><b>end tag:</b> &lt;&sol;title&gt;</li>
+</ul>
+
+
+<h2>Body</h2>
+<!--body-->
+<p id="body" class="hstyle">Element:Body</p>
+<p style="margin-top: -23px"class="rest"><b>Description:</b>It organizes the code so that the content is easy to find.<br><b>Syntax:</b></p>
+<ul style="margin-top: -24px" class="rest">
+    <li><b>start tag:</b>&lt;body&gt;</li>
+    <li><b>content:</b> The entire contents of the site.</li>
+    <li><b>end tag:</b> &lt;&sol;body&gt;</li>
+</ul>
+
+<!--Heading-->
+<p id="headings" class="hstyle">Element:Headings</p>
+<p style= "margin-top: -23px"class="rest"><b>Description:</b>This is what organizes and titles paragraphs or the entire page.<br><b>Syntax:</b> </p>
+<ul style="margin-top: -24px" class="rest">
+    <li><b>start tag:</b>&lt;h1&gt;(The number can be changed depending on the size you want it.</li>
+    <li><b>content:</b> title of the page or paragraph.</li>
+    <li><b>end tag:</b> &lt;&sol;h1&gt;</li>
+</ul>
+<p style="margin-top:-20px" class="example"><b>Examples:</b></p>
+<p style="margin-top:-18px" class="example">&lt;h1&gt;</p>
+<h1 style="margin-top:-20px" class="example">Heading 1</h1>
+<p style="margin-top:-17px" class="example">&lt;h2&gt;</p>
+<h2 style="margin-top:-15px" class="example">Heading 2</h2>
+<p style="margin-top:-17px" class="example">&lt;h3&gt;</p>
+<h3 style="margin-top:-15px" class="example">Heading 3</h3>
+
+
+<!--Paragraphs-->
+<p id="paragraphs" class="hstyle">Element:Paragraphs</p>
+<p style= "margin-top: -23px"class="rest"><b>Description:</b>It is the text located in the body.<br><b>Syntax:</b> </p>
+<ul style="margin-top: -24px" class="rest">
+    <li><b>start tag:</b>&lt;p&gt;</li>
+    <li><b>content:</b> text of the site</li>
+    <li><b>end tag:</b> &lt;&sol;p&gt;</li>
+</ul>
+<p style="margin-top:-20px" class="example"><b>Example:</b><br>The paragraph elemnt is what was used to write this text.</p>
+
+<!--Breaks-->
+<p id="breaks" class="hstyle">Element:Breaks</p>
+<p style= "margin-top: -23px"class="rest"><b>Description:</b>It splits paragraphs up.<br><b> Syntax:</b></p>
+<ul style="margin-top: -24px" class="rest">
+    <li><b>start tag:</b>&lt;br&gt;</li>
+    <li><b>content:</b> It splits paragraphs.</li>
+    <li><b>end tag:</b> none</li>
+</ul>
+<p style="margin-top:-20px" class="example"><b>Example:</b><br>text&lt;br&gt;more text <br>text<br>more text</p>
+
+<!--Lines-->
+<p id="lines" class="hstyle">Element:Lines</p>
+<p style= "margin-top: -23px"class="rest"><b>Description:</b>It puts lines in between paragraphs or wherever you want them.<br><b>Syntax:</b> </p>
+<ul style="margin-top: -24px" class="rest">
+    <li><b>start tag:</b>&lt;hr&gt;</li>
+    <li><b>content:</b>It makes a line between content.</li>
+    <li><b>end tag:</b> none</li>
+</ul>
+<p style="margin-top:-20px" class="example"><b>Example:</b><br>text&lt;hr&gt;more text <br>text<hr>more text</p>
+
+<!--Comments-->
+<p id="comments" class="hstyle">Element:Comments</p>
+<p style= "margin-top: -23px"class="rest"><b>Description:</b>It lets you place comments in the code that only you can view.<br><b>Syntax:</b> </p>
+<ul style="margin-top: -24px" class="rest">
+    <li><b>start tag:</b>&lt;!--</li>
+    <li><b>content:</b>It makes a comment that can only be viewed by you.</li>
+    <li><b>end tag:</b>--&gt;</li>
+</ul>
+<p style="margin-top:-20px" class="example"><b>Example:</b><br>&lt;!--Comment--&gt;<br>If you click ctrl U, you can see all of my comments I used to organize along with my message to you.</p> <!--HELLO STALKER-->
+
+
+<!--Links-->
+<p id="links" class="hstyle">Element:Links</p>
+<p style= "margin-top: -23px"class="rest"><b>Description:</b>It hyperlinks a site that you want.<br><b>Syntax:</b></p>
+<ul style="margin-top: -24px" class="rest">
+    <li><b>start tag:</b>&lt;a href="url"&gt;</li>
+    <li><b>content:</b> text that you want shown in place of the url.</li>
+    <li><b>end tag:</b> &lt;&sol;a&gt;</li>
+</ul>
+<p style="margin-top:-20px" class="example"><b>Example:</b><br>&lt;a href="www.google.com"&gt;A very famous search engine.&lt;&sol;a&gt;<br><a href="https://www.google.com/">A very famous search engine.</a></p>
+
+<!--Images-->
+<p id="images" class="hstyle">Element:Images</p>
+<p style= "margin-top: -23px"class="rest"><b>Description:</b>It places an image in your site.<br><b>Syntax:</b></p>
+<ul style="margin-top: -24px" class="rest">
+    <li><b>start tag:</b>&lt;img src="url"&gt;</li>
+    <li><b>content:</b>The image will show up on your page. No content in needed unless you wanted to add an alternaive text to the image which you put alt="text" after the url. You can also adjust the size by using width="n" or height="n". </li>
+    <li><b>end tag:</b>none</li>
+</ul>
+<p style="margin-top:-20px" class="example"><b>Example:</b><br>&lt;img src="https://static.pexels.com/photos/36753/flower-purple-lical-blosso.jpg" width="55" height="48"&gt;<br><img src="https://static.pexels.com/photos/36753/flower-purple-lical-blosso.jpg" width="55" height="48"><br>&lt;img src="https://static.pexels.com/photos/36753/flower-purple-lical-blosso.jpg" width="75" height="60"&gt;<br><img src="https://static.pexels.com/photos/36753/flower-purple-lical-blosso.jpg" width="75" height="60"></p>
+
+<!--Lists-->
+<p id="lists" class="hstyle">Element:Lists</p>
+<p style= "margin-top:-23px"class="rest"><b>Description:</b>It makes lists that are numbered or bulleted in text. <br><b>Syntax:</b></p>
+<ul style="margin-top: -24px" class="rest">
+    <li><b>start tag:</b>&lt;ul or ol&gt;This depends on weather you want a ordered or unordered list. &lt;li&gt; This goes before evry listed item to recognize that it is seperate</li>
+    <li><b>content:</b> listed items</li>
+    <li><b>end tag:</b> &lt;&sol;ul or ol&gt; &lt;&sol;li&gt;</li>
+</ul>
+<p style="margin-top:-20px" class="example"><b>Example:</b><br>&lt;ul&gt; &lt;li&gt;an&lt;&sol;li&gt;  &lt;li&gt;unordered&lt;&sol;li&gt;  &lt;li&gt;list&lt;&sol;li&gt; &lt;&sol;ul&gt;</p>
+<ul style="margin-top:-20px" class="example">
+    <li>An</li>
+    <li>Unordered</li>
+    <li>List</li>
+</ul>
+<p style="margin-top:-18px" class="example">&lt;ol&gt; &lt;li&gt;an&lt;&sol;li&gt;  &lt;li&gt;ordered&lt;&sol;li&gt;  &lt;li&gt;list&lt;&sol;li&gt; &lt;&sol;ol&gt;</p>
+<ol style="margin-top:-20px" class="example">
+    <li>An</li>
+    <li>Ordered</li>
+    <li>List</li>
 </ol>
+
+
 <b>Tables:</b><p>Tables need 3 tags: < table >, < tr>, and < th>.</p>
 <table style="width:100%">
   <tr>
