--- a/html-reference.html
+++ b/html-reference.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>HTML Reference</title>
-  </head>
-  <body>
-<link href="html-reference.css" rel="stylesheet" type="text/css" />
 
 <!DOCTYPE html>
 <html>
@@ -14,7 +7,7 @@
   <body class="body">
 <link href="styles.css" rel="stylesheet" type="text/css" />
 <h1>HTML Reference page: Dhanya Jakkula</h1>
-<table id="table">
+<table id=table>
   <tr>
     <th>Name</th>
     <th>Start Tag</th>
@@ -105,8 +98,8 @@
 
 <!--Doctype-->
 <p class="hstyle">Element:!DOCTYPE</p>
-<p style= "margin-top: -23px"class="rest"><b>Description:</b> It tells the computer what language is being used.<br><b>Syntax:</b></p>
-<ul style="margin-top: -24px" class="rest">
+<p class="marginr" class="rest"><b>Description:</b>It tells the computer what language is being used.<br><b>Syntax:</b></p>
+<ul class="marginr" "rest">
     <li><b>start tag:</b>&lt;!DOCTYPE&gt;</li>
     <li><b>content:</b> language used</li>
     <li><b>end tag:</b> none</li>
@@ -114,8 +107,8 @@
 
 <!--html-->
 <p id="html" class="hstyle">Element:HTML</p>
-<p style= "margin-top: -23px"class="rest"><b>Description:</b> It tells the computer what program is being used.<br><b>Syntax:</b> </p>
-<ul style="margin-top: -24px" class="rest">
+<p class="marginr" "rest"><b>Description:</b> It tells the computer what program is being used.<br><b>Syntax:</b> </p>
+<ul class="marginr" "rest">
     <li><b>start tag:</b>&lt;html&gt;</li>
     <li><b>content:</b> language used</li>
     <li><b>end tag:</b> &lt;&sol;html&gt;</li>
@@ -125,8 +118,8 @@
 <h2>Head</h2>
 <!--head-->
 <p id="head" class="hstyle">Element:Head</p>
-<p style= "margin-top: -23px"class="rest"><b>Description:</b>It keeps all of the elemnts of the header together.<br><b> Syntax:</b></p>
-<ul style="margin-top: -24px" class="rest">
+<p class="marginr" class="rest"><b>Description:</b>It keeps all of the elemnts of the header together.<br><b> Syntax:</b></p>
+<ul class="marginr" class="rest">
     <li><b>start tag:</b>&lt;head&gt;</li>
     <li><b>content: </b>header elements</li>
     <li><b>end tag:</b> &lt;&sol;head&gt;</li>
@@ -134,8 +127,8 @@
 
 <!--title-->
 <p id="title" class="hstyle">Element:Title</p>
-<p style= "margin-top: -23px"class="rest">Description:It is the title of the page loacted at the top of the tab.<br><b>Syntax:</b></p>
-<ul style="margin-top: -24px" class="rest">
+<p class="marginr" class="rest">Description:It is the title of the page loacted at the top of the tab.<br><b>Syntax:</b></p>
+<ul class="marginr" class="rest">
     <li><b>start tag:</b>&lt;title&gt;</li>
     <li><b>content:</b> title of the site</li>
     <li><b>end tag:</b> &lt;&sol;title&gt;</li>
@@ -145,8 +138,8 @@
 <h2>Body</h2>
 <!--body-->
 <p id="body" class="hstyle">Element:Body</p>
-<p style="margin-top: -23px"class="rest"><b>Description:</b>It organizes the code so that the content is easy to find.<br><b>Syntax:</b></p>
-<ul style="margin-top: -24px" class="rest">
+<p class="marginr" class="rest"><b>Description:</b>It organizes the code so that the content is easy to find. It also makes it easier to edit the entire body: instead of <br><b>Syntax:</b></p>
+<ul class="marginr" class="rest">
     <li><b>start tag:</b>&lt;body&gt;</li>
     <li><b>content:</b> The entire contents of the site.</li>
     <li><b>end tag:</b> &lt;&sol;body&gt;</li>
@@ -154,8 +147,8 @@
 
 <!--Heading-->
 <p id="headings" class="hstyle">Element:Headings</p>
-<p style= "margin-top: -23px"class="rest"><b>Description:</b>This is what organizes and titles paragraphs or the entire page.<br><b>Syntax:</b> </p>
-<ul style="margin-top: -24px" class="rest">
+<p class="marginr" class="rest"><b>Description:</b>This is what organizes and titles paragraphs or the entire page.<br><b>Syntax:</b> </p>
+<ul class="marginr" class="rest">
     <li><b>start tag:</b>&lt;h1&gt;(The number can be changed depending on the size you want it.</li>
     <li><b>content:</b> title of the page or paragraph.</li>
     <li><b>end tag:</b> &lt;&sol;h1&gt;</li>
@@ -171,107 +164,121 @@
 
 <!--Paragraphs-->
 <p id="paragraphs" class="hstyle">Element:Paragraphs</p>
-<p style= "margin-top: -23px"class="rest"><b>Description:</b>It is the text located in the body.<br><b>Syntax:</b> </p>
-<ul style="margin-top: -24px" class="rest">
+<p class="marginr" class="rest"><b>Description:</b>It is the text located in the body.<br><b>Syntax:</b> </p>
+<ul class="marginr" class="rest">
     <li><b>start tag:</b>&lt;p&gt;</li>
     <li><b>content:</b> text of the site</li>
     <li><b>end tag:</b> &lt;&sol;p&gt;</li>
 </ul>
-<p style="margin-top:-20px" class="example"><b>Example:</b><br>The paragraph elemnt is what was used to write this text.</p>
+<p class="margine" class="example"><b>Example:</b><br>&lt;p&gt;The paragraph element is what was used to write this text.&lt;&sol;p&gt;The paragraph element is what was used to write this text.</p>
 
 <!--Breaks-->
 <p id="breaks" class="hstyle">Element:Breaks</p>
-<p style= "margin-top: -23px"class="rest"><b>Description:</b>It splits paragraphs up.<br><b> Syntax:</b></p>
-<ul style="margin-top: -24px" class="rest">
+<p class="marginr" class="rest"><b>Description:</b>It splits paragraphs up.<br><b> Syntax:</b></p>
+<ul class="marginr" class="rest">
     <li><b>start tag:</b>&lt;br&gt;</li>
     <li><b>content:</b> It splits paragraphs.</li>
     <li><b>end tag:</b> none</li>
 </ul>
-<p style="margin-top:-20px" class="example"><b>Example:</b><br>text&lt;br&gt;more text <br>text<br>more text</p>
+<p class="margine" class="example"><b>Example:</b><br>text&lt;br&gt;more text <br>text<br>more text</p>
 
 <!--Lines-->
 <p id="lines" class="hstyle">Element:Lines</p>
-<p style= "margin-top: -23px"class="rest"><b>Description:</b>It puts lines in between paragraphs or wherever you want them.<br><b>Syntax:</b> </p>
-<ul style="margin-top: -24px" class="rest">
+<p class="marginr" class="rest"><b>Description:</b>It puts lines in between paragraphs or wherever you want them.<br><b>Syntax:</b> </p>
+<ul class="marginr" class="rest">
     <li><b>start tag:</b>&lt;hr&gt;</li>
     <li><b>content:</b>It makes a line between content.</li>
     <li><b>end tag:</b> none</li>
 </ul>
-<p style="margin-top:-20px" class="example"><b>Example:</b><br>text&lt;hr&gt;more text <br>text<hr>more text</p>
+<p class="margine" class="example"> <b>Example:</b><br>text&lt;hr&gt;more text <br>text<hr>more text</p>
 
 <!--Comments-->
 <p id="comments" class="hstyle">Element:Comments</p>
-<p style= "margin-top: -23px"class="rest"><b>Description:</b>It lets you place comments in the code that only you can view.<br><b>Syntax:</b> </p>
-<ul style="margin-top: -24px" class="rest">
+<p class="marginr" class="rest"><b>Description:</b>It lets you place comments in the code that only you can view.<br><b>Syntax:</b> </p>
+<ul class="marginr" class="rest">
     <li><b>start tag:</b>&lt;!--</li>
     <li><b>content:</b>It makes a comment that can only be viewed by you.</li>
     <li><b>end tag:</b>--&gt;</li>
 </ul>
-<p style="margin-top:-20px" class="example"><b>Example:</b><br>&lt;!--Comment--&gt;<br>If you click ctrl U, you can see all of my comments I used to organize along with my message to you.</p> <!--HELLO STALKER-->
+<p class="margine" class="example"><b>Example:</b><br>&lt;!--Comment--&gt;<br>If you click ctrl U, you can see all of my comments I used to organize along with my message to you.</p> <!--HELLO STALKER-->
 
 
 <!--Links-->
 <p id="links" class="hstyle">Element:Links</p>
-<p style= "margin-top: -23px"class="rest"><b>Description:</b>It hyperlinks a site that you want.<br><b>Syntax:</b></p>
-<ul style="margin-top: -24px" class="rest">
+<p class="marginr" class="rest"><b>Description:</b>It hyperlinks a site that you want.<br><b>Syntax:</b></p>
+<ul class="marginr" class="rest">
     <li><b>start tag:</b>&lt;a href="url"&gt;</li>
     <li><b>content:</b> text that you want shown in place of the url.</li>
     <li><b>end tag:</b> &lt;&sol;a&gt;</li>
 </ul>
-<p style="margin-top:-20px" class="example"><b>Example:</b><br>&lt;a href="www.google.com"&gt;A very famous search engine.&lt;&sol;a&gt;<br><a href="https://www.google.com/">A very famous search engine.</a></p>
+<p class="margine" class="example"><b>Example:</b><br>&lt;a href="www.google.com"&gt;A very famous search engine.&lt;&sol;a&gt;<br><a href="https://www.google.com/">A very famous search engine.</a></p>
 
 <!--Images-->
 <p id="images" class="hstyle">Element:Images</p>
-<p style= "margin-top: -23px"class="rest"><b>Description:</b>It places an image in your site.<br><b>Syntax:</b></p>
-<ul style="margin-top: -24px" class="rest">
+<p class="marginr" class="rest"><b>Description:</b>It places an image in your site.<br><b>Syntax:</b></p>
+<ul class="marginr" class="rest">
     <li><b>start tag:</b>&lt;img src="url"&gt;</li>
     <li><b>content:</b>The image will show up on your page. No content in needed unless you wanted to add an alternaive text to the image which you put alt="text" after the url. You can also adjust the size by using width="n" or height="n". </li>
     <li><b>end tag:</b>none</li>
 </ul>
-<p style="margin-top:-20px" class="example"><b>Example:</b><br>&lt;img src="https://static.pexels.com/photos/36753/flower-purple-lical-blosso.jpg" width="55" height="48"&gt;<br><img src="https://static.pexels.com/photos/36753/flower-purple-lical-blosso.jpg" width="55" height="48"><br>&lt;img src="https://static.pexels.com/photos/36753/flower-purple-lical-blosso.jpg" width="75" height="60"&gt;<br><img src="https://static.pexels.com/photos/36753/flower-purple-lical-blosso.jpg" width="75" height="60"></p>
+<p class=margine class="example"><b>Example:</b><br>&lt;img src="https://static.pexels.com/photos/36753/flower-purple-lical-blosso.jpg" width="55" height="48"&gt;<br><img src="https://static.pexels.com/photos/36753/flower-purple-lical-blosso.jpg" width="55" height="48"><br>&lt;img src="https://static.pexels.com/photos/36753/flower-purple-lical-blosso.jpg" width="75" height="60"&gt;<br><img src="https://static.pexels.com/photos/36753/flower-purple-lical-blosso.jpg" width="75" height="60"></p>
 
 <!--Lists-->
 <p id="lists" class="hstyle">Element:Lists</p>
-<p style= "margin-top:-23px"class="rest"><b>Description:</b>It makes lists that are numbered or bulleted in text. <br><b>Syntax:</b></p>
-<ul style="margin-top: -24px" class="rest">
+<p class="marginr" class="rest"><b>Description:</b>It makes lists that are numbered or bulleted in text. <br><b>Syntax:</b></p>
+<ul class="marginr" class="rest">
     <li><b>start tag:</b>&lt;ul or ol&gt;This depends on weather you want a ordered or unordered list. &lt;li&gt; This goes before evry listed item to recognize that it is seperate</li>
     <li><b>content:</b> listed items</li>
     <li><b>end tag:</b> &lt;&sol;ul or ol&gt; &lt;&sol;li&gt;</li>
 </ul>
-<p style="margin-top:-20px" class="example"><b>Example:</b><br>&lt;ul&gt; &lt;li&gt;an&lt;&sol;li&gt;  &lt;li&gt;unordered&lt;&sol;li&gt;  &lt;li&gt;list&lt;&sol;li&gt; &lt;&sol;ul&gt;</p>
-<ul style="margin-top:-20px" class="example">
+<p class="margine" class="example"><b>Example:</b><br>&lt;ul&gt; &lt;li&gt;an&lt;&sol;li&gt;  &lt;li&gt;unordered&lt;&sol;li&gt;  &lt;li&gt;list&lt;&sol;li&gt; &lt;&sol;ul&gt;</p>
+<ul class="example" class="margine">
     <li>An</li>
     <li>Unordered</li>
     <li>List</li>
 </ul>
-<p style="margin-top:-18px" class="example">&lt;ol&gt; &lt;li&gt;an&lt;&sol;li&gt;  &lt;li&gt;ordered&lt;&sol;li&gt;  &lt;li&gt;list&lt;&sol;li&gt; &lt;&sol;ol&gt;</p>
-<ol style="margin-top:-20px" class="example">
+<p class="margine" class="example">&lt;ol&gt; &lt;li&gt;an&lt;&sol;li&gt;  &lt;li&gt;ordered&lt;&sol;li&gt;  &lt;li&gt;list&lt;&sol;li&gt; &lt;&sol;ol&gt;</p>
+<ol class="margine" class="example">
     <li>An</li>
     <li>Ordered</li>
     <li>List</li>
 </ol>
 
 
-<b>Tables:</b><p>Tables need 3 tags: < table >, < tr>, and < th>.</p>
-<table style="width:100%">
+
+<!--Tables-->
+<p id="tables" class="hstyle">Element:Tables</p>
+<p class="marginr" class="rest"><b>Description:</b>It makes tables so that you can easily sort data.<br><b>Syntax:</b></p>
+<ul class="marginr" class="rest">
+    <li><b>start tag:</b>&lt;table&gt;&lt;tr&gt; (table row) &lt;th&gt; (table heading) &lt;td&gt; (table data)</li>
+    <li><b>content:</b> Data that needs to be sorted.</li>
+    <li><b>end tag:</b> &lt;&sol;table&gt;&lt;&sol;tr&gt;&lt;&sol;th&gt;&lt;&sol;td&gt;</li>
+</ul>
+<p class="margine" class="example"><b>Example:</b><br></p><p class="margine" class="example">&lt;table&gt;&lt;tr&gt; &lt;th&gt; Firstname&lt;&sol;th&gt;&lt;th&gt; Lastname&lt;&sol;th&gt;&lt;&sol;tr&gt;&lt;tr&gt;&lt;td&gt;Jill&lt;&sol;td&gt;&lt;&sol; &lt;td&gt;Smith&lt;&sol;td&gt;&lt;&sol;tr&gt;&lt;tr&gt;&lt;td&gt;Eve&lt;&sol;td&gt;&lt;&sol; &lt;td&gt;Jackson&lt;&sol;td&gt;&lt;&sol;tr&gt; &lt;&sol;table&gt;</p>
+<table id="table">
   <tr>
     <th>Firstname</th>
     <th>Lastname</th> 
-    <th>Age</th>
   </tr>
   <tr>
     <td>Jill</td>
     <td>Smith</td> 
-    <td>50</td>
   </tr>
   <tr>
     <td>Eve</td>
     <td>Jackson</td> 
-    <td>94</td>
   </tr>
 </table>
-<p>It should look like this.</p>
-<b>Blocks:</b><p>The tag is < div >. It makes blocks that <div>,,,,,,......,,,,,,</div> seperate paragraphs.</p>
 
+
+<!--Blocks-->
+<p id="blocks" class="hstyle">Element:Blocks</p>
+<p class="marginr" class="rest"><b>Description:</b>It makes breaks within the content.<br><b>Syntax:</b> </p>
+<ul class="marginr" class="rest">
+    <li><b>start tag:</b>&lt;div&gt;</li>
+    <li><b>content:</b> what ever you want to divide the content </li>
+    <li><b>end tag:</b> &lt;&sol;div&gt;</li>
+</ul>
+<p class="margine" class="example"><b>Example:</b><br>&lt;div&gt;hello&lt;&sol;div&gt;<div class="example">hello</div></p>
   </body>
 </html>
