--- a/html-reference.html
+++ b/html-reference.html
@@ -5,7 +5,7 @@
     <title>HTML Reference</title>
   </head>
   <body class="body">
-<link href="styles.css" rel="stylesheet" type="text/css" />
+<link href="html-reference.css" rel="stylesheet" type="text/css" />
 <h1>HTML Reference page: Dhanya Jakkula</h1>
 <table id=table>
   <tr>
