--- a/project/index.html
+++ b/project/index.html
@@ -5,6 +5,9 @@
  
 
 <body style="background-color:yellow;">
+ <h1>Test</h1>
+ <img src="images/beachpic.jpg">
+ 
   <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/project/index.html">
 <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwic2L7zxJTXAhVHwWMKHbyUDnIQjRwIBw&url=http%3A%2F%2Fwww.iconsdb.com%2Fpink-icons%2Fhome-icon.html&psig=AOvVaw1CplYoQAqJQ_iz9iT6kolU&ust=1509322039811842" alt="Homepage" width="42" height="42" border="0">
   <a href="https://dhanyaaa.github.io/jakkulad8518.github.io/project/location.html">
