--- a/project/index.html
+++ b/project/index.html
@@ -1,9 +1,52 @@
-
 <!DOCTYPE html>
-<html>
-<title>La Jolla Shores Beach</title>
- 
+<html lang="en">
+<head>
+<title>La Jolla Shores</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="layoutc3.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 
-<body style="background-color:yellow;">
+<body class="font">
+
+<div class="header">
+  <h1>La Jolla Shores Official Site Homepage</h1>
+  <p>Welcome to the site for the beach of La Jolla Shores. Here you will find all of the resources you need in order to find the information you are looking for about this beach.</p>
+</div>
+
+<div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="location.html">Loaction</a>
+  <a href="food.html">Food</a>
+  <a href="hotel.html">Hotel</a>
+  <a href="activities.html">Activities</a>
+</div>
+
+<div class="row content">
+  <div class="column side">
+    <h2>A Brief History</h2>
+    <p>It is suggested that the Kumeyaay name for the area was transcribed by the Spanish settlers as La Jolla. An alternative, pseudo-etymological suggestion for the origin of the name is that it is an alternate spelling of the Spanish word la joya, which means "the jewel".</p>
+  </div>
+  <div class="column middle">
+    <h2>About</h2>
+    <p>This beach is a well known beach, here in San Diego. The beach provides visitors a guarentee of a good time. La Jolla Shores is a place for everyone from people that need a place to read a book to people that want to surf the beautiful waves here. To learn more, click one of the tabs on the navigation bar depending on what you want to know.</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/yTF_xM6xSyk" frameborder="0" allowfullscreen>A video</iframe>
+  
+  </div>
+  <div class="column side">
+    <h2>Other Resources</h2>
+    <ul>
+        <li><a href="https://www.sandiego.gov/lifeguards/beaches">San Diego Organization</a></li>
+        <li><a href="https://www.sandiego.gov/lifeguards">Life Guards Needed</a></li>
+        <li><a href="https://www.sandiego.gov/lifeguards/junior">Junior Life Guard Program</a></li>
+    </ul>
+  </div>
+</div>
+
+<div class="footer">
+  <p>This site was created by Dhanya Jakkula</p>
+</div>
+  
 </body>
 </html>
