--- a/project/index.html
+++ b/project/index.html
@@ -43,7 +43,7 @@
     </ul>
   </div>
 </div>
-<img src="images/beachpic.jpg"/>
+<img src="/images/beachpic.jpg">
 <div class="footer">
   <p>This site was created by Dhanya Jakkula</p>
 </div>
