--- a/project/index.html
+++ b/project/index.html
@@ -44,6 +44,8 @@
   </div>
 </div>
 <img src="/images/beachpic.jpg" width="600" height="300">
+<img src="/images/beachpic2.jpg" width="600" height="300">
+<img src="/images/beachpic3.jpg" width="600" height="300">
 <div class="footer">
   <p>This site was created by Dhanya Jakkula</p>
 </div>
