--- a/project/index.html
+++ b/project/index.html
@@ -46,7 +46,7 @@
 <img src="/images/beachpic.jpg" width="300" height="150">
 <img src="/images/beachpic2.jpg" width="300" height="150">
 <img src="/images/beachpic3.jpg" width="300" height="150">
-<p class="column side">These pictures illustrate the beauty of this amazing beach. View the video aboe as well for a bird's eye view.
+<p class="column side">These pictures illustrate the beauty of this amazing beach. View the video aboe as well for a bird's eye view.</p>
   <div class="footer">
   <p>This site was created by Dhanya Jakkula</p>
 </div>
