--- a/project/food.html
+++ b/project/food.html
@@ -60,7 +60,9 @@
 
 <p>If none of these restaurants meet your needs, there is always the option of bringing your own food. Food is welcome at the beach; however, you may only eat in the designated picnic area. We highly stress this too avoid littering. Please pick up after yourself.</p>
 <p>Many of these restaurants are a bit high priced, bt acordig to customers, the price is worth it. We hope you will have an easy time fining a restaurant and eating comfortably.</p>
-
+<img src="/images/dukes.jpg">
+<img src="/images/georges.jpg">
+<img src="/images/picnic.jpg">
 
 </div>
 
