--- a/project/location.html
+++ b/project/location.html
@@ -1,12 +1,46 @@
-
 <!DOCTYPE html>
-<html>
-  <title>La Jolla Shores</title>
-<body style="background-color:yellow;">
+<html lang="en">
+<head>
+<title>La Jolla Shores</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="layoutc3.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 
-<h2>Location</h1>
-  <p>This becah is located in La Jolla and very close by to many places such as Carmel Valley and Mira Mesa. The address is 8246 La Vereda, La Jolla, CA 92037</p> 
-  <img src="http://www.destination360.com/north-america/us/california/la-jolla/hotel-la-jolla-at-the-shores-map.gif">
-  <p>You will find that this beach is in a very convenient location; however, parking may be an issue.</p>
-</body>
-</html>
+<body class="font">
+
+<div class="header">
+  <h1>La Jolla Shores Location</h1>
+  <p>Here you will find all of the information on the address of and parking at the beach.</p>
+</div>
+
+<div class="topnav">
+  <a href="index.html">Home</a>
+  <a class="active"href="location.html">Loaction</a>
+  <a href="food.html">Food</a>
+  <a href="hotel.html">Hotel</a>
+  <a href="activities.html">Activities</a>
+</div>
+
+<div class="row content">
+  <div class="column side">
+    <h2>Address</h2>
+    <p>8300 Camino Del Oro, La Jolla, CA 92037</p>
+    <p>The beach does not have a closing time, so you can go whenever you want or can go.</p>
+  </div>
+  <div class="column middle">
+    <h2>Directions</h2>
+    <p>Get on CA-56 W/State Hwy 56 W from Carmel Valley Rd. Continue on CA-56 W/State Hwy 56 W. Take I-5 S to La Jolla Village Dr. Take exit 28 from I-5 S. Continue on La Jolla Village Dr. Take Prestwick Dr and Calle Del Oro to Camino Del Oro.
+    </p>
+
+  
+  </div>
+  <div class="column side">
+    <h2>Parking</h2>
+    <p>Parking here at the becah is extremely limited compared to how many people visit. It is highly suggested to park .5 miles away and walk to the beach in order to avoid the wait; however, it takes one 20-30 miutes on average to find a spot, so if you are willing to wait or feel lucky there is always a chance.</p>
+    <img src="/images/map.gif">
+    <img src="/images/map2.jpg">
+    <img src="/images/map3.jpg">
+  </div>
+</div>
