--- a/project/location.html
+++ b/project/location.html
@@ -42,6 +42,6 @@
 
   </div>
     <img src="/images/map.gif">
-    <img src="/images/map2.jpg">
+    <img src="/images/map2.jpg" width="200" height="150">
     <img src="/images/map3.jpg">
 </div>
