--- a/project/location.html
+++ b/project/location.html
@@ -43,5 +43,5 @@
   </div>
     <img src="/images/map.gif">
     <img src="/images/map2.jpg" width="400" height="300">
-    <img src="/images/map3.jpg" width=">
+    <img src="/images/map3.jpg" width="500">
 </div>
