--- a/project/location.html
+++ b/project/location.html
@@ -44,4 +44,9 @@
     <img src="/images/map.gif">
     <img src="/images/map2.jpg" width="400" height="300">
     <img src="/images/map3.jpg" width="500">
+   
+  <div class="column side">
+    <p>These pictures will give an idea on wher thwe beach is located and how it would look like.</p>
+
+  </div>
 </div>
