--- a/project/location.html
+++ b/project/location.html
@@ -45,6 +45,6 @@
     <img src="/images/map2.jpg" width="400" height="300">
     <img src="/images/map3.jpg" width="500">
    
-
+<p>These pictures give an idea of where the beach is located as well as how it looks.</p>
   </div>
 </div>
