--- a/project/index.html
+++ b/project/index.html
@@ -17,7 +17,7 @@
 
 <div class="topnav">
   <a class="active" href="index.html">Home</a>
-  <a href="location.html">Loaction</a>
+  <a href="location.html">Location</a>
   <a href="food.html">Food</a>
   <a href="hotel.html">Hotel</a>
   <a href="activities.html">Activities</a>
