--- a/project/food.html
+++ b/project/food.html
@@ -16,7 +16,7 @@
 </div>
 <div class="topnav">
   <a href="index.html">Home</a>
-  <a href="location.html">Loaction</a>
+  <a href="location.html">Location</a>
   <a class="active" href="food.html">Food</a>
   <a href="hotel.html">Hotel</a>
   <a href="activities.html">Activities</a>
