--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <h1>My page!</h1>
   <p>Welcome to my homepage!</p>
 <ul>
-  <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/">My excercises</a>
-  <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/css-excercises">CSS Excercises</a>
-  <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/html-reference.html"> Reference page</a>
+  <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/">My excercises</a></li>
+  <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/css-excercises">CSS Excercises</a></li>
+  <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/html-reference.html"> Reference page</a></li>
+  <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/project/index.html"> Final Website Project</a></li>
 </body>
 </html>
