--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -2,4 +2,7 @@
 
 <title>CSS Exercises</title>
 <h1>My exercises</h1>
-<a href=""
+  <a href="selectors.html"> Selectors and Visual Rules Site</a>
+  <a href="selectorsandvisualrules.css">  Selectors and Visual Rules CSS</a>
+  <a href="visual-rules.html"> Selectors and Visuals Site</a>
+  <a href="selectors&visuals.css"> Selectors and Visuals CSS</a>
