--- a/project/food.html
+++ b/project/food.html
@@ -63,7 +63,7 @@
 <img src="/images/dukes.jpg" width="150" height="150">
 <img src="/images/george.jpg" width="300" height="150">
 <img src="/images/picnic.jpg" width="150" height="150">
-
+<p>The pictures above show how scenic the restaurant is and how serene and peaceful your meal would be.</p>
 </div>
 
 <div class="footer">
