--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <p>Welcome to my homepage!</p>
 <ul>
   <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/exercises/">My excercises</a></li>
-  <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/css-excercises">CSS Excercises</a></li>
+  <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/css-exercises">CSS Exercises</a></li>
   <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/html-reference.html"> Reference page</a></li>
   <li><a href="https://dhanyaaa.github.io/dhanyaaa.github.io/project/index.html"> Final Website Project</a></li>
 </body>
