--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <link rel="shortcut icon" type="image/download.png" href="favicon.ico">
   <title>Home Page</title>
 <body style="background-color:yellow;">
   <h1>My page!</h1>
