--- a/responsive.html
+++ b/responsive.html
@@ -1,9 +1,9 @@
 <html>
    <div>
-     <img src= '/images/sunset small.jpg'
-        srcset='/images/sunset large 5700w,
-                /images/sunset2-jpg-maxq.jpg 3500w,
-                /images/sunset medium.jpg 2000w,
-                /images/sunset small.jpg 1000w'>        
+     <img src= '/images/sunset-small.jpg'
+        srcset='/images/sunset-large 5700w,
+                /images/sunset-original.jpg 3500w,
+                /images/sunset-medium.jpg 2000w,
+                /images/sunset-small.jpg 1000w'>        
    </div>
 </html>
