--- a/responsive.html
+++ b/responsive.html
@@ -1,8 +1,8 @@
 <html>
    <div>
-     <img src= '/images/sunset-small.jpg'
-        srcset='/images/sunset-large 5700w,
-                /images/sunset-original.jpg 3500w,
+     <img src= '/images/sunset-original.jpg'
+        srcset='/images/sunset-original.jpg,
+                /images/sunset-large.jpg 3500w,
                 /images/sunset-medium.jpg 2000w,
                 /images/sunset-small.jpg 1000w'>        
    </div>
