--- a/responsive.html
+++ b/responsive.html
@@ -1,9 +1,9 @@
 <html>
    <div>
      <img src= '/images/sunset-small.jpg'
-        srcset='/images/sunset-original.jpg 5700w,
-                /images/sunset-large.jpg 3500w,
-                /images/sunset-medium.jpg 2000w,
-                /images/sunset-small.jpg 1000w'>        
+        srcset='/images/sunset-large.jpg 2000w,
+                /images/sunset-original.jpg 1000w,
+                /images/sunset-medium.jpg 500w,
+                /images/sunset-small.jpg 250w'>        
    </div>
 </html>
