--- a/responsive.html
+++ b/responsive.html
@@ -1,6 +1,6 @@
 <html>
    <div>
-     <img src= '/images/sunset-small.jpg'
+     <img src= '/images/sunset-original.jpg'
         srcset='/images/sunset-large.jpg 5700w,
                 /images/sunset-original.jpg 3500w,
                 /images/sunset-medium.jpg 2000w,
